fix pdfs receipts sort